update: duyệt, hủy duyệt, xuất PO, xuất Phiếu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
             <!-- Sidebar menu starts -->
             <div class="sidebarMenuScroll">
                 <ul class="sidebar-menu">
+                    <li><a href="/pokh"><i class="bi bi-pie-chart"></i>PO Khách Hàng</a></li>
                     @for (item of menus; track item.ID) {
                     <li>
                         <a href="#" (click)="addComponent('a')">
